--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ li {
     font-style: normal;
     font-weight: 500;
     line-height: 140%;
+    box-sizing: border-box;
 }
 
 .header_address {
@@ -94,22 +95,178 @@ li {
     position: relative;
 }
 
-.map_address::before,.mail_address::before{
+.map_address::before, .mail_address::before {
     position: absolute;
     content: "";
     width: 24px;
     height: 24px;
     left: -29px;
-} 
+}
 
 .map_address::before {
     background-image: url("../img/icon_location.svg");
 }
 
-.mail_address::before{
+.mail_address::before {
     background-image: url("../img/icon_mail.svg");
 }
 
-.header_links_name>a{
+.header_links_name>a {
+    color: #3B3C40;
+}
+
+.header_menu {
+    display: flex;
+    align-items: center;
+}
+
+.main_logo_wrp {
+    margin-right: 34px;
+}
+
+.header_catalog_btn {
+    max-width: 159px;
+    width: 100%;
+    max-height: 60px;
+    height: 100%;
+    border-radius: 15px;
+    background-color: #E50E78;
+    position: relative;
+    margin-right: 25px;
+}
+
+.header_catalog_btn::before {
+    content: "Каталог";
+    position: absolute;
+    color: white;
+    top: 29%;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 130%;
+    left: 20px;
+}
+
+.catalog_link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+    justify-content: flex-end;
+}
+
+.catalog_link_icon_wrp {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    max-width: 50px;
+    min-height: 50px;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.catalog_link_icon {}
+
+.header_search_wrp {
+    display: flex;
+    padding: 5px 5px 5px 3px;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 915px;
+    min-height: 60px;
+    width: 100%;
+    border-radius: 15px;
+    border: 1px solid #E50E78;
+    box-sizing: border-box;
+    position: relative;
+    margin-right: 40.5px;
+}
+
+.header_search_wrp:focus {
+    border: 2px solid #E50E78;
+}
+
+.header_search {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 140%;
+    width: 94%;
+    min-height: 50px;
+    padding-left: 25px;
+    border: transparent;
+}
+
+.header_search[type=search] {
+    color: #3B3C40;
+    font-weight: 500;
+    line-height: 140%;
+}
+
+.header_search[type="search"]:focus {
+    outline: none;
+}
+
+.header_search[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    width: 20px;
+    height: 20px;
+    background: url("../img/icon_close.svg");
+    cursor: pointer;
+}
+
+.search_icon {
+    position: absolute;
+    right: 5px;
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    background: #E50E78;
+    border: none;
+}
+
+.user_btn_container {
+    display: flex;
+    gap: 30px;
+}
+
+.user_btn {
+    position: relative;
+}
+
+.user_btn_icon_heart::after, .user_btn_icon_cart::after{
+    color: white;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 140%;
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    border-radius: 11px;
+    background-color: #E50E78;
+}
+
+.user_btn_icon_heart::after {
+    content: "7";
+    top: 1px;
+    right: 22px;
+}
+
+.user_btn_icon_cart::after{
+    content: "4";
+    top: 1px;
+    right: 10px;
+}
+
+.user_btn>button {
+    background-color: transparent;
+    border: none;
+}
+
+.user_btn>button>p {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 130%;
     color: #3B3C40;
 }
