--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,7 @@ li {
     width: 100%;
     border-radius: 50px;
     background: #F3EFFF;
+    margin-bottom: 80px;
 }
 
 .swiper-slide {
@@ -590,4 +591,73 @@ li {
 
 .swiper-button-prev::after, .swiper-button-next::after {
     content: "";
+}
+
+.slogan_list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.slogan_item {
+    max-width: 507px;
+    width: 100%;
+    height: 196px;
+    border-radius: 20px;
+    background: #F3EFFF;
+    /* box-shadow: 5px 15px 70px 0px rgba(173, 178, 201, 0.25); */
+    overflow: hidden;
+    position: relative;
+    z-index: -1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 30px;
+    box-sizing: border-box;
+}
+
+.slogan_item_ellipse {
+    border-radius: 398px;
+    background: linear-gradient(171deg, rgba(255, 255, 255, 0.58) 4.95%, rgba(255, 255, 255, 0.00) 95.57%);
+    box-shadow: 1.898px -2.214px 3.479px 0px #FFF inset, -3.163px 8.539px 6.641px 0px rgba(0, 0, 0, 0.49) inset;
+    backdrop-filter: blur(3.0043752193450928px);
+    width: 398px;
+    height: 398px;
+    flex-shrink: 0;
+    position: absolute;
+    right: -51px;
+    top: -95px;
+    z-index: -1;
+}
+
+.slogan_item_ellipse::before{
+    content: "";
+    background-image: url("../img/Blend\ Group\ 4.png");
+    position: inherit;
+    max-width: 413px;
+    width: 100%;
+    max-height: 223px;
+    height: 100%;
+    top: 33px;
+    opacity: 50%;
+}
+
+.slogan_item_ellipse_txt {
+    max-width: 299px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.slogan_item_ellipse_title {
+    color: #3B3C40;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.slogan_item_ellipse_subtitle {
+    color: #9293B0;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 140%;
 }
