--- a/css/style.css
+++ b/css/style.css
@@ -684,27 +684,30 @@ li {
 }
 
 .all_category {
-    max-width: 237px;
-    width: 100%;
     max-height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 5px 5px 5px 30px;
-    box-sizing:border-box;
+    box-sizing: border-box;
     border: none;
     border-radius: 15px;
     background: var(--button-gradient, linear-gradient(96deg, #DD3197 0%, #822FAF 101.4%));
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 130%;
+    gap: 25px;
 }
 
-.all_category_icon{
+.all_category_icon {
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     width: 50px;
     height: 50px;
     padding: 13px;
-    box-sizing:border-box;
+    box-sizing: border-box;
     background-color: white;
     border-radius: 10px;
     border: none;
@@ -769,21 +772,77 @@ li {
     width: 100%;
     overflow: hidden;
     position: relative;
+    margin-bottom: 152px;
 }
 
-.slider {
+.category_slider, .other_slider {
     display: flex;
     transition: transform 0.5s ease-in-out;
+    transform: translateX(8px);
+
 }
 
-.slide {
-    flex: 0 0 25%;
+.category_slide_item {
+    flex: 0 0 calc(100%/4);
     /* Каждый слайд занимает 25% ширины контейнера */
     box-sizing: border-box;
+    position: relative;
+}
+
+.category_slide_item>img {
+    /* width: 100%; */
+}
+
+.category_slide_item_link {
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    max-width: 345px;
+    width: 100%;
+    min-height: 72px;
+    z-index: 1;
+    border-radius: 20px;
+    border: 1px solid var(--white, #FFF);
+    background: rgba(244, 246, 248, 0.50);
+    backdrop-filter: blur(6px);
+    padding: 12px 0px 12px 20px;
+    box-sizing: border-box;
+    color: #3B3C40;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 120%;
+    display: block;
+}
+
+.category_slide_item_link::after {
+    content: "";
+    position: inherit;
+    background-image: url("../img/vector_icon_black.svg");
+    width: 24px;
+    height: 24px;
+    right: 17px;
+    top: 24px;
+}
+
+.category_count {
+    position: absolute;
+    color: #7b7b7c;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 140%;
+    bottom: 9px;
+    left: 19px;
+    z-index: 1;
+}
+
+.slider_container {
+    position: relative;
 }
 
 .prev_button,
-.next_button {
+.next_button,
+.other_prev_button,
+.other_next_button {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -793,15 +852,16 @@ li {
     cursor: pointer;
 }
 
-.prev_button {
+.prev_button, .other_prev_button {
     left: 10px;
 }
 
-.next_button {
+.next_button, .other_next_button {
     right: 10px;
 }
 
-.prev_button, .next_button {
+.prev_button, .next_button, .other_prev_button,
+.other_next_button {
     width: 40px;
     height: 40px;
     border-radius: 30px;
@@ -815,6 +875,65 @@ li {
     background-position: center;
 }
 
-.prev_button {
+.prev_button, .other_prev_button {
     transform: rotate(180deg);
+}
+
+.form_container {
+    border-radius: 50px;
+    background: var(--purple-light, #F3EFFF);
+    margin-bottom: 100px;
+    max-height: 497px;
+    height: 100%;
+    display: flex;
+
+}
+
+.form_img_wrp {
+    border-radius: 40px;
+    background: linear-gradient(303deg, rgba(255, 255, 255, 0.27) 26.33%, #FDFCFF 39.99%);
+    width: 50%;
+}
+
+.form_img {
+    max-width: 650px;
+    width: 100%;
+    border-radius: 50px;
+    box-shadow: 33px 1px 38px -28px rgba(126, 117, 178, 0.25);
+
+}
+
+.form_lable {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.input_container {
+    position: relative;
+}
+
+.form_input {
+    padding: 8px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.form_icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    font-size: 18px;
+}
+
+.form_button {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.form_button:hover {
+    background-color: #45a049;
 }
