--- a/css/style.css
+++ b/css/style.css
@@ -879,6 +879,10 @@ li {
     transform: rotate(180deg);
 }
 
+.form {
+    margin: 0 auto;
+}
+
 .form_container {
     border-radius: 50px;
     background: var(--purple-light, #F3EFFF);
@@ -903,19 +907,78 @@ li {
 
 }
 
-.form_lable {
-    display: block;
-    margin-bottom: 5px;
+.form_title {
+    color: #3B3C40;
+    font-size: 50px;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 20px;
+    margin-top: 62px;
+}
+
+.form_subtitle {
+    color: #9293B0;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 140%;
+    margin-bottom: 40px;
+}
+
+#myForm {
+    max-width: 513px;
+    max-height: 60px;
+    height: 100%;
 }
 
 .input_container {
     position: relative;
+    display: flex;
+    /* padding: 18px 18px 18px 25px; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+    box-sizing: border-box;
+
+}
+
+.form_input_name, .form_input_tel {
+    position: relative;
+}
+
+.form_input_name {
+    margin-bottom: 20px;
+}
+
+.form_input_tel {
+    margin-bottom: 30px;
+}
+
+.form_input_name::before, .form_input_tel::before {
+    content: "";
+    left: 25px;
+    top: 50%;
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    transform: translate(0%, -50%);
+}
+
+.form_input_name::before {
+    background-image: url("../img/user_icon.png");
+}
+
+.form_input_tel::before {
+    background-image: url("../img/tel_icon_black.png");
 }
 
 .form_input {
-    padding: 8px;
+    padding: 8px 8px 8px 55px;
     width: 100%;
     box-sizing: border-box;
+    height: 60px;
+    border-radius: 15px;
+    border: 1px solid #E50E78;
 }
 
 .form_icon {
@@ -926,14 +989,128 @@ li {
     font-size: 18px;
 }
 
+.form_treaty_btn_wrp {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.form_treaty, .form_treaty a {
+    color: #9293B0;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 140%;
+}
+
+.form_treaty {
+    max-width: 267px;
+}
+
+.form_treaty a {
+    text-decoration-line: underline;
+}
+
 .form_button {
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
+    max-height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 5px 5px 30px;
+    box-sizing: border-box;
     border: none;
-    cursor: pointer;
+    border-radius: 15px;
+    background: var(--button-gradient, linear-gradient(96deg, #DD3197 0%, #822FAF 101.4%));
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 130%;
+    gap: 25px;
 }
 
 .form_button:hover {
     background-color: #45a049;
+}
+
+
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+}
+
+.modal_content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border: 1px solid #888;
+    max-width: 1224px;
+    width: 100%;
+    max-height: 385px;
+    height: 100%;
+    border-radius: 30px;
+    background: #F3EFFF;
+}
+
+.modal_svg_bcg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
+.close {
+    position: absolute;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.modal_txt_wrp {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 32px;
+    height: 100%;
+
+}
+
+.modal_title {
+    color: #3B3C40;
+    font-size: 50px;
+    font-weight: 500;
+    line-height: normal;
+    text-align: center;
+}
+
+.modal_subtitle {
+    color: #9293B0;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 130%;
+}
+
+.error_message {
+    color: red;
+    display: none;
+    margin-top: 5px;
+    position: absolute;
+    top: 55px;
+}
+
+.error {
+    border: 3px solid red !important;
 }
