--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,7 @@ li {
     padding: 0px 24px;
     box-sizing: border-box;
     background-color: #F4F6F8;
+    border-radius: 15px;
 }
 
 .btn_nav_item_link {
@@ -693,20 +694,20 @@ li {
     overflow: hidden;
 }
 
-.category_title {
+.category_title, .sale_title {
     display: flex;
     justify-content: space-between;
     margin-bottom: 60px;
 }
 
-.category_title_txt {
+.category_title_txt, .sale_title_txt {
     color: #3B3C40;
     font-size: 50px;
     font-weight: 500;
     line-height: normal;
 }
 
-.all_category {
+.all_category, .all_sales {
     max-height: 60px;
     display: flex;
     align-items: center;
@@ -723,7 +724,7 @@ li {
     gap: 25px;
 }
 
-.all_category_icon {
+.all_category_icon, .all_sales_icon, .form_button_icon {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -754,7 +755,7 @@ li {
 
 
 .swiper_container::after {
-    content: "";
+    /* content: ""; */
     position: absolute;
     top: 0px;
     right: -1px;
@@ -1167,7 +1168,7 @@ li {
     min-height: 560px;
 }
 
-.main_logo_wrp_hidden{
+.main_logo_wrp_hidden {
     display: none;
 }
 
@@ -1642,6 +1643,10 @@ label {
     cursor: pointer;
 }
 
+.menu, .overlay{
+    display: none;
+}
+
 @media (max-width: 375px) {
 
     .center {
@@ -1694,6 +1699,8 @@ label {
         display: block;
         font-size: 0px;
         position: relative;
+        width: 24px;
+        height: 24px;
     }
 
     .header_tel_hidden::before {
@@ -1701,7 +1708,8 @@ label {
         content: "";
         width: 24px;
         height: 24px;
-        left: -24px;
+        left: 0px;
+        z-index: 1;
         background-image: url("../img/tel_icon_black.png");
     }
 
@@ -1723,9 +1731,12 @@ label {
         margin-right: 8px;
         padding: 13.5px 11px;
         box-sizing: border-box;
+        /* background-color: transparent; */
+        border: none;
+
     }
 
-
+    .menu_burger_hidden button {}
 
     .main_logo_wrp, .header_catalog_btn, .user_btn_container {
         display: none;
@@ -1763,6 +1774,7 @@ label {
 
     .btn_nav_item {
         border-radius: 10px;
+
     }
 
     .btn_nav_item>a {
@@ -2063,9 +2075,24 @@ label {
         top: 32px;
     }
 
-    .form_button {
+    .form_button, .all_sales {
         max-height: 42px;
         border-radius: 10px;
+    }
+
+    .form_button_icon, .all_sales_icon {
+        width: 36px;
+        height: 36px;
+        /* border-radius: 10px; */
+        background-image: url("../img/arrow-right-mini.svg");
+        background-repeat: no-repeat;
+        padding: 8px;
+        box-sizing: border-box;
+        background-position: center center;
+    }
+
+    .all_category_hidden {
+        display: none;
     }
 
     .all_category_icon {
@@ -2239,13 +2266,107 @@ label {
         margin: 0px auto;
     }
 
-    .main_logo_wrp_hidden{
+    .main_logo_wrp_hidden {
         display: block;
         padding: 0px 10px 40px;
     }
 
-    .main_logo_wrp_hidden img{
+    .main_logo_wrp_hidden img {
         width: 41px;
         height: 41px;
+    }
+    
+    .overlay{
+        display: block;
+    }
+    
+    .menu {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: -295px;
+        width: 295px;
+        height: 100%;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        transition: left 0.3s ease-in-out;
+        z-index: 2;
+        overflow-y: auto;
+        /* z-index: 6; */
+        padding: 30px 10px 20px;
+        box-sizing: border-box;
+        border-radius: 0px 20px 20px 0px;
+    }
+
+    .menu_account_link {
+        display: flex;
+        flex-direction: column;
+        gap: 21px;
+    }
+
+    .menu_account_link a{
+        display: flex;
+        align-items: center;
+        gap: 12px;
+    }
+
+    .menu_account_link a, .contact-btn, .menu_nav a {
+        color: #3B3C40;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 130%;
+    }
+
+    .menu a:hover {
+        background-color: #f9f9f9;
+    }
+
+    .divider {
+        height: 1px;
+        background-color: #eee;
+        margin: 25px 0;
+    }
+
+    .menu_btn_list{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .contact-btn{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        background-color: transparent;
+        border: none;
+    }
+
+    .overlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 2;
+    }
+
+    .close-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 20px;
+        background: none;
+        border: none;
+        cursor: pointer;
+        color: #333;
+    }
+
+    .menu_nav{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
     }
 }
